--- a/main.html
+++ b/main.html
@@ -2,14 +2,93 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Game Stats</title>
+    <style>
+        table {
+            width: 80%;
+            margin: 20px auto;
+            border-collapse: collapse;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        th, td {
+            padding: 12px 20px;
+            text-align: center;
+            border: 1px solid #ddd;
+        }
+
+        th {
+            background-color: #4CAF50;
+            color: white;
+            font-size: 1.2em;
+        }
+
+        td {
+            background-color: #f9f9f9;
+        }
+
+        tr:nth-child(even) td {
+            background-color: #f2f2f2;
+        }
+
+        tr:hover {
+            background-color: #ddd;
+        }
+
+        .header {
+            font-size: 1.5em;
+            text-align: center;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
-    <!-- add table here -->
 
-        
+    <h2 class="header">Game Player Statistics</h2>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Player</th>
+                <th>Games Played</th>
+                <th>Points Scored</th>
+                <th>Assists</th>
+                <th>Rebounds</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>John Doe</td>
+                <td>15</td>
+                <td>230</td>
+                <td>45</td>
+                <td>120</td>
+            </tr>
+            <tr>
+                <td>Jane Smith</td>
+                <td>18</td>
+                <td>270</td>
+                <td>55</td>
+                <td>140</td>
+            </tr>
+            <tr>
+                <td>Alex Johnson</td>
+                <td>20</td>
+                <td>300</td>
+                <td>60</td>
+                <td>130</td>
+            </tr>
+            <tr>
+                <td>Mary Lee</td>
+                <td>14</td>
+                <td>180</td>
+                <td>40</td>
+                <td>110</td>
+            </tr>
+        </tbody>
+    </table>
+
 </body>
 </html>
+
